third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/borrow_field_combo.exp

Diagnostics:
error: cannot copy mutable reference in local `inner`
   ┌─ tests/reference-safety/v1-tests/borrow_field_combo.move:31:37
   │
31 │         let c; if (cond) c = freeze(copy inner) else c = &other.s1;
   │                                     ^^^^^^^^^^ copied here

error: cannot copy mutable reference in local `inner`
   ┌─ tests/reference-safety/v1-tests/borrow_field_combo.move:40:40
   │
40 │         let c; if (cond) c = id(freeze(copy inner)) else c = &other.s1; // error in v2
   │                                        ^^^^^^^^^^ copied here

error: cannot copy mutable reference in local `inner`
   ┌─ tests/reference-safety/v1-tests/borrow_field_combo.move:49:30
   │
49 │         let c; if (cond) c = copy inner else c = &mut outer.s2; // error in v2
   │                              ^^^^^^^^^^ copied here

error: cannot copy mutable reference in local `inner`
   ┌─ tests/reference-safety/v1-tests/borrow_field_combo.move:56:37
   │
56 │         let c; if (cond) c = id_mut(copy inner) else c = &mut outer.s2; // error in v2
   │                                     ^^^^^^^^^^ copied here


Diagnostics:
error: cannot mutable borrow local `inner` since other references exists
    ┌─ tests/reference-safety/v1-tests/borrow_field_combo.move:104:23
    │
103 │         let c; if (cond) c = &mut inner.f1 else c = &mut inner.f2;
    │                                   -------- previous mutable field borrow
104 │         let f1 = &mut inner.f1; // no error in v1, but should error.
    │                       ^^^^^^^^ mutable borrow attempted here

error: cannot mutable borrow local `inner` since other references exists
    ┌─ tests/reference-safety/v1-tests/borrow_field_combo.move:113:23
    │
112 │         let c; if (cond) c = id_mut(&mut inner.f1) else c = &mut inner.f2;
    │                                          -------- previous mutable field borrow
113 │         let f1 = &mut inner.f1; // no error in v1, but should error
    │                       ^^^^^^^^ mutable borrow attempted here
